--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -9,6 +9,7 @@ generic-service:
     INGRESS_URL: "https://managing-prisoner-apps-staff-ui.hmpps.service.justice.gov.uk"
     HMPPS_AUTH_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
     TOKEN_VERIFICATION_API_URL: "https://token-verification-api.prison.service.justice.gov.uk"
+    FRONTEND_COMPONENTS_API_URL: https://frontend-components.hmpps.service.justice.gov.uk
     DPS_URL: "https://dps.prison.service.justice.gov.uk/"
     AUDIT_ENABLED: "false"
 
