--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -11,6 +11,7 @@ generic-service:
     INGRESS_URL: "https://managing-prisoner-apps-staff-ui-dev.hmpps.service.justice.gov.uk"
     HMPPS_AUTH_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
     TOKEN_VERIFICATION_API_URL: "https://token-verification-api-dev.prison.service.justice.gov.uk"
+    COMPONENT_API_URL: https://frontend-components-dev.hmpps.service.justice.gov.uk
     DPS_URL: "https://dps-dev.prison.service.justice.gov.uk/"
     ENVIRONMENT_NAME: DEV
     AUDIT_ENABLED: "false"
