--- a/package.json
+++ b/package.json
@@ -126,9 +126,9 @@
     "aws-sdk-client-mock": "^4.1.0",
     "chokidar": "^3.6.0",
     "concurrently": "^9.1.2",
-    "cypress": "^13.17.0",
+    "cypress": "^14.0.3",
     "cypress-multi-reporters": "^2.0.4",
-    "esbuild": "^0.24.2",
+    "esbuild": "^0.25.0",
     "esbuild-plugin-clean": "^1.0.1",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-plugin-manifest": "^1.0.5",
@@ -136,16 +136,21 @@
     "glob": "^11.0.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "jest-html-reporter": "^3.10.2",
+    "jest-html-reporter": "^4.0.1",
     "jest-junit": "^16.0.0",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.3.0",
     "mocha-junit-reporter": "^2.2.1",
-    "nock": "^13.5.6",
+    "nock": "^14.0.1",
     "prettier": "^3.4.2",
     "prettier-plugin-jinja-template": "^2.0.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
+  },
+  "overrides": {
+    "@jgoz/esbuild-plugin-typecheck": {
+      "esbuild": "$esbuild"
+    }
   }
 }
