--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -6,12 +6,13 @@ generic-service:
     host: managing-prisoner-apps-staff-ui.hmpps.service.justice.gov.uk
 
   env:
-    INGRESS_URL: "https://managing-prisoner-apps-staff-ui.hmpps.service.justice.gov.uk"
-    HMPPS_AUTH_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
-    TOKEN_VERIFICATION_API_URL: "https://token-verification-api.prison.service.justice.gov.uk"
-    COMPONENT_API_URL: "https://frontend-components.hmpps.service.justice.gov.uk"
-    DPS_URL: "https://dps.prison.service.justice.gov.uk/"
-    AUDIT_ENABLED: "false"
+    INGRESS_URL: 'https://managing-prisoner-apps-staff-ui.hmpps.service.justice.gov.uk'
+    HMPPS_AUTH_URL: 'https://sign-in.hmpps.service.justice.gov.uk/auth'
+    TOKEN_VERIFICATION_API_URL: 'https://token-verification-api.prison.service.justice.gov.uk'
+    COMPONENT_API_URL: 'https://frontend-components.hmpps.service.justice.gov.uk'
+    DPS_URL: 'https://dps.prison.service.justice.gov.uk/'
+    MANAGING_PRISONER_APPS_API_URL: 'https://prison-app-api.hmpps.service.justice.gov.uk'
+    AUDIT_ENABLED: 'false'
 
 generic-prometheus-alerts:
   alertSeverity: hmpps-launchpad
