--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -11,6 +11,7 @@ generic-service:
     TOKEN_VERIFICATION_API_URL: 'https://token-verification-api.prison.service.justice.gov.uk'
     COMPONENT_API_URL: 'https://frontend-components.hmpps.service.justice.gov.uk'
     DPS_URL: 'https://dps.prison.service.justice.gov.uk/'
+    HMPPS_MANAGE_USERS_API_URL: 'https://manage-users-api.hmpps.service.justice.gov.uk'
     MANAGING_PRISONER_APPS_API_URL: 'https://prison-app-api.hmpps.service.justice.gov.uk'
     AUDIT_ENABLED: 'false'
 
