--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -8,13 +8,15 @@ generic-service:
     host: managing-prisoner-apps-staff-ui-dev.hmpps.service.justice.gov.uk
 
   env:
-    INGRESS_URL: "https://managing-prisoner-apps-staff-ui-dev.hmpps.service.justice.gov.uk"
-    HMPPS_AUTH_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
-    TOKEN_VERIFICATION_API_URL: "https://token-verification-api-dev.prison.service.justice.gov.uk"
-    COMPONENT_API_URL: "https://frontend-components-dev.hmpps.service.justice.gov.uk"
-    DPS_URL: "https://dps-dev.prison.service.justice.gov.uk/"
+    INGRESS_URL: 'https://managing-prisoner-apps-staff-ui-dev.hmpps.service.justice.gov.uk'
+    HMPPS_AUTH_URL: 'https://sign-in-dev.hmpps.service.justice.gov.uk/auth'
+    TOKEN_VERIFICATION_API_URL: 'https://token-verification-api-dev.prison.service.justice.gov.uk'
+    COMPONENT_API_URL: 'https://frontend-components-dev.hmpps.service.justice.gov.uk'
+    DPS_URL: 'https://dps-dev.prison.service.justice.gov.uk/'
+    HMPPS_MANAGE_USERS_API_URL: 'https://manage-users-api-dev.hmpps.service.justice.gov.uk'
+    MANAGING_PRISONER_APPS_API_URL: 'https://prison-app-api-dev.hmpps.service.justice.gov.uk'
     ENVIRONMENT_NAME: DEV
-    AUDIT_ENABLED: "false"
+    AUDIT_ENABLED: 'false'
 
 generic-prometheus-alerts:
   alertSeverity: hmpps-launchpad-nonprod
