--- a/feature.env
+++ b/feature.env
@@ -9,3 +9,5 @@ AUTH_CODE_CLIENT_SECRET=clientsecret
 CLIENT_CREDS_CLIENT_ID=clientid
 CLIENT_CREDS_CLIENT_SECRET=clientsecret
 ENVIRONMENT_NAME=dev
+
+MANAGING_PRISON_APPS_API_URL=http://localhost:9091/managingPrisonerApps
