--- a/package.json
+++ b/package.json
@@ -89,9 +89,10 @@
     "connect-flash": "^0.1.1",
     "connect-redis": "^8.0.1",
     "csrf-sync": "^4.0.3",
+    "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "govuk-frontend": "^5.8.0",
+    "govuk-frontend": "^5.9.0",
     "helmet": "^8.0.0",
     "http-errors": "^2.0.0",
     "jwt-decode": "^4.0.0",
