--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@ministryofjustice/frontend": "^3.3.1",
     "@ministryofjustice/hmpps-connect-dps-components": "^2.0.0",
     "@ministryofjustice/hmpps-monitoring": "^0.0.1-beta.2",
+    "accessible-autocomplete": "^3.0.1",
     "agentkeepalive": "^4.6.0",
     "applicationinsights": "^2.9.6",
     "body-parser": "^1.20.3",
