--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -15,6 +15,7 @@ generic-service:
     DPS_URL: 'https://dps-preprod.prison.service.justice.gov.uk/'
     HMPPS_MANAGE_USERS_API_URL: 'https://manage-users-api-preprod.hmpps.service.justice.gov.uk'
     MANAGING_PRISONER_APPS_API_URL: 'https://prison-app-api-preprod.hmpps.service.justice.gov.uk'
+    PRISON_API_URL: 'https://prison-api-preprod.prison.service.justice.gov.uk'
     ENVIRONMENT_NAME: PRE-PRODUCTION
     AUDIT_ENABLED: 'false'
 
