--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -12,7 +12,7 @@ generic-service:
     COMPONENT_API_URL: 'https://frontend-components.hmpps.service.justice.gov.uk'
     DPS_URL: 'https://dps.prison.service.justice.gov.uk/'
     HMPPS_MANAGE_USERS_API_URL: 'https://manage-users-api.hmpps.service.justice.gov.uk'
-    MANAGING_PRISONER_APPS_API_URL: 'https://prison-app-api.hmpps.service.justice.gov.uk'
+    MANAGING_PRISONER_APPS_API_URL: 'https://managing-prisoner-apps-api.hmpps.service.justice.gov.uk'
     AUDIT_ENABLED: 'false'
 
 generic-prometheus-alerts:
