--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/node22/tsconfig.json",
   "compileOnSave": true,
+  "isolatedModules": true,
   "compilerOptions": {
     "outDir": "./dist",
     "sourceMap": true,
@@ -15,6 +16,14 @@
     "experimentalDecorators": true,
     "typeRoots": ["./server/@types", "./node_modules/@types"]
   },
-  "exclude": ["node_modules", "assets/**/*.js", "integration_tests", "dist", "cypress.config.ts", "esbuild", "eslint.config.mjs"],
+  "exclude": [
+    "node_modules",
+    "assets/**/*.js",
+    "integration_tests",
+    "dist",
+    "cypress.config.ts",
+    "esbuild",
+    "eslint.config.mjs"
+  ],
   "include": ["**/*.js", "**/*.ts"]
 }
