--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -13,6 +13,7 @@ generic-service:
     TOKEN_VERIFICATION_API_URL: 'https://token-verification-api-preprod.prison.service.justice.gov.uk'
     COMPONENT_API_URL: 'https://frontend-components-preprod.hmpps.service.justice.gov.uk'
     DPS_URL: 'https://dps-preprod.prison.service.justice.gov.uk/'
+    DPS_PRISONER_URL: 'https://prisoner-preprod.digital.prison.service.justice.gov.uk/'
     HMPPS_MANAGE_USERS_API_URL: 'https://manage-users-api-preprod.hmpps.service.justice.gov.uk'
     MANAGING_PRISONER_APPS_API_URL: 'https://managing-prisoner-apps-api-preprod.hmpps.service.justice.gov.uk'
     PRISON_API_URL: 'https://prison-api-preprod.prison.service.justice.gov.uk'
