--- a/feature.env
+++ b/feature.env
@@ -11,3 +11,4 @@ CLIENT_CREDS_CLIENT_SECRET=clientsecret
 ENVIRONMENT_NAME=dev
 
 MANAGING_PRISONER_APPS_API_URL=http://localhost:9091/managingPrisonerApps
+PRISON_API_URL=http://localhost:9091/prison
