--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -14,7 +14,9 @@ generic-service:
     DPS_PRISONER_URL: 'https://prisoner.digital.prison.service.justice.gov.uk/'
     HMPPS_MANAGE_USERS_API_URL: 'https://manage-users-api.hmpps.service.justice.gov.uk'
     MANAGING_PRISONER_APPS_API_URL: 'https://managing-prisoner-apps-api.hmpps.service.justice.gov.uk'
-    AUDIT_ENABLED: 'false'
+    PRISON_API_URL: 'https://prison-api.prison.service.justice.gov.uk'
+    ENVIRONMENT_NAME: PRODUCTION
+    AUDIT_ENABLED: 'true'
 
   allowlist:
     groups:
