--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -16,7 +16,7 @@ generic-service:
     MANAGING_PRISONER_APPS_API_URL: 'https://managing-prisoner-apps-api.hmpps.service.justice.gov.uk'
     PRISON_API_URL: 'https://prison-api.prison.service.justice.gov.uk'
     ENVIRONMENT_NAME: PRODUCTION
-    AUDIT_ENABLED: 'true'
+    AUDIT_ENABLED: 'false'
 
   allowlist:
     groups:
