--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -15,6 +15,7 @@ generic-service:
     HMPPS_MANAGE_USERS_API_URL: 'https://manage-users-api.hmpps.service.justice.gov.uk'
     MANAGING_PRISONER_APPS_API_URL: 'https://managing-prisoner-apps-api.hmpps.service.justice.gov.uk'
     PRISON_API_URL: 'https://prison-api.prison.service.justice.gov.uk'
+    PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships.hmpps.service.justice.gov.uk'
     ENVIRONMENT_NAME: PRODUCTION
     AUDIT_ENABLED: 'false'
 
