--- a/package.json
+++ b/package.json
@@ -149,6 +149,8 @@
     "typescript": "^5.7.3"
   },
   "overrides": {
+    "@eslint/plugin-kit": "^0.3.3",
+    "form-data": "^4.0.4",
     "@jgoz/esbuild-plugin-typecheck": {
       "esbuild": "$esbuild"
     }
