--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -25,4 +25,4 @@ generic-service:
       - prisons
 
 generic-prometheus-alerts:
-  alertSeverity: hmpps-launchpad
+  alertSeverity: hmpps-managing-prisoner-apps-prod
