--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.872.0",
     "@ministryofjustice/frontend": "^5.1.5",
+    "@ministryofjustice/hmpps-audit-client": "^1.1.1",
     "@ministryofjustice/hmpps-connect-dps-components": "^2.2.0",
     "@ministryofjustice/hmpps-monitoring": "^0.0.1",
     "@types/qs": "^6.14.0",
