switch off auditing for e2e

--- a/feature.env
+++ b/feature.env
@@ -10,6 +10,7 @@ CLIENT_CREDS_CLIENT_ID=clientid
 CLIENT_CREDS_CLIENT_SECRET=clientsecret
 ENVIRONMENT_NAME=dev
 AUDIT_ENABLED: 'false'
+AUDIT_SQS_QUEUE_URL: '' # required, but unused as auditing is disabled
 
 MANAGING_PRISONER_APPS_API_URL=http://localhost:9091/managingPrisonerApps
 PRISON_API_URL=http://localhost:9091/prison
