--- a/feature.env
+++ b/feature.env
@@ -15,3 +15,4 @@ AUDIT_SQS_QUEUE_URL='' # required, but unused as auditing is disabled
 MANAGING_PRISONER_APPS_API_URL=http://localhost:9091/managingPrisonerApps
 PRISON_API_URL=http://localhost:9091/prison
 PERSONAL_RELATIONSHIPS_API_URL=http://localhost:9091/personalRelationships
+HMPPS_AUDIT_URL=http://localhost:9091/audit
