--- a/helm_deploy/hmpps-managing-prisoner-apps-staff-ui/values.yaml
+++ b/helm_deploy/hmpps-managing-prisoner-apps-staff-ui/values.yaml
@@ -1,9 +1,8 @@
 generic-service:
+  # the IRSA service account name for accessing AWS resources
+  serviceAccountName: hmpps-managing-prisoner-apps
   nameOverride: hmpps-managing-prisoner-apps-staff-ui
   productId: 'DPS097' # productId for the product that this belongs too, i.e. DPS001, see README.md for details
-
-  # the IRSA service account name for accessing AWS resources
-  # serviceAccountName: "hmpps-managing-prisoner-apps-staff-ui"
 
   replicaCount: 4
 
@@ -31,8 +30,9 @@ generic-service:
     REDIS_ENABLED: 'true'
     REDIS_TLS_ENABLED: 'true'
     TOKEN_VERIFICATION_ENABLED: 'true'
+    AUDIT_ENABLED: 'false'
     AUDIT_SQS_REGION: 'eu-west-2'
-    AUDIT_SERVICE_NAME: 'DPS097' # Your audit service name
+    AUDIT_SERVICE_NAME: 'hmpps-managing-prisoner-apps' # Your audit service name
 
   # Pre-existing kubernetes secrets to load as environment variables in the deployment.
   # namespace_secrets:
@@ -51,10 +51,9 @@ generic-service:
       REDIS_AUTH_TOKEN: 'auth_token'
     application-insights:
       APPLICATIONINSIGHTS_CONNECTION_STRING: "APPLICATIONINSIGHTS_CONNECTION_STRING"
-    # This secret will need to be created in your namespace (note it isn't in hmpps-templates-dev)
-    # IRSA configuration in your namespace will also be required, and then uncomment serviceAccountName above.
-    # sqs-hmpps-audit-secret:
-    #   AUDIT_SQS_QUEUE_URL: 'sqs_queue_url'
+    sqs-hmpps-audit-secret:
+      AUDIT_SQS_QUEUE_URL: "sqs_queue_url"
+      AUDIT_SQS_QUEUE_NAME: "sqs_queue_name"
 
   allowlist:
     groups:
