--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -20,7 +20,8 @@ generic-service:
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api-dev.hmpps.service.justice.gov.uk'
     HMPPS_AUDIT_URL: 'https://audit-api-dev.hmpps.service.justice.gov.uk'
     ENVIRONMENT_NAME: DEV
-    AUDIT_ENABLED: 'true'
+    AUDIT_ENABLED: 'false'
+    AUDIT_SQS_QUEUE_URL: '' # required, but unused as auditing is disabled
 
 generic-prometheus-alerts:
   alertSeverity: hmpps-managing-prisoner-apps-nonprod
