fix integration tests

--- a/feature.env
+++ b/feature.env
@@ -9,7 +9,7 @@ AUTH_CODE_CLIENT_SECRET=clientsecret
 CLIENT_CREDS_CLIENT_ID=clientid
 CLIENT_CREDS_CLIENT_SECRET=clientsecret
 ENVIRONMENT_NAME=dev
-AUDIT_ENABLED='false'
+AUDIT_ENABLED=false
 
 MANAGING_PRISONER_APPS_API_URL=http://localhost:9091/managingPrisonerApps
 PRISON_API_URL=http://localhost:9091/prison
