--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -19,7 +19,7 @@ generic-service:
     PRISON_API_URL: 'https://prison-api-preprod.prison.service.justice.gov.uk'
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api-preprod.hmpps.service.justice.gov.uk'
     ENVIRONMENT_NAME: PRE-PRODUCTION
-    AUDIT_ENABLED: 'false'
+    AUDIT_ENABLED: 'true'
 
   allowlist:
     groups:
