--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -17,7 +17,7 @@ generic-service:
     PRISON_API_URL: 'https://prison-api.prison.service.justice.gov.uk'
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api.hmpps.service.justice.gov.uk'
     ENVIRONMENT_NAME: PRODUCTION
-    AUDIT_ENABLED: 'false'
+    AUDIT_ENABLED: 'true'
 
   allowlist:
     groups:
