--- a/helm_deploy/values-staging.yaml
+++ b/helm_deploy/values-staging.yaml
@@ -19,7 +19,7 @@ generic-service:
     PRISON_API_URL: 'https://prison-api-dev.prison.service.justice.gov.uk'
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api-dev.hmpps.service.justice.gov.uk'
     ENVIRONMENT_NAME: STAGING
-    AUDIT_ENABLED: 'false'
+    AUDIT_ENABLED: 'true'
 
   allowlist:
     groups:
