--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -18,6 +18,7 @@ generic-service:
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api.hmpps.service.justice.gov.uk'
     ENVIRONMENT_NAME: PRODUCTION
     AUDIT_ENABLED: 'true'
+    GA4_SITE_ID: 'G-92H885MST9'
 
   allowlist:
     groups:
