--- a/helm_deploy/values-staging.yaml
+++ b/helm_deploy/values-staging.yaml
@@ -20,6 +20,7 @@ generic-service:
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api-dev.hmpps.service.justice.gov.uk'
     ENVIRONMENT_NAME: STAGING
     AUDIT_ENABLED: 'false'
+    GA4_SITE_ID: ''
 
   allowlist:
     groups:
