--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "accessible-autocomplete": "^3.0.1",
     "agentkeepalive": "^4.6.0",
     "applicationinsights": "^2.9.8",
-    "body-parser": "^2.2.0",
+    "body-parser": "^2.2.1",
     "bunyan": "^1.8.15",
     "bunyan-format": "^0.2.1",
     "compression": "^1.8.1",
@@ -107,7 +107,7 @@
   },
   "devDependencies": {
     "@jgoz/esbuild-plugin-typecheck": "^4.0.3",
-    "@ministryofjustice/eslint-config-hmpps": "^0.0.3",
+    "@ministryofjustice/eslint-config-hmpps": "^1.0.2",
     "@ministryofjustice/hmpps-npm-script-allowlist": "0.0.3",
     "@tsconfig/node22": "^22.0.2",
     "@types/bunyan": "^1.8.11",
@@ -142,7 +142,7 @@
     "jest": "^30.0.5",
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "lint-staged": "^16.1.5",
     "mocha-junit-reporter": "^2.2.1",
     "nock": "^14.0.10",
@@ -155,6 +155,7 @@
   "overrides": {
     "brace-expansion": "^1.1.12",
     "form-data": "^4.0.4",
+    "js-yaml": "^4.1.1",
     "@jgoz/esbuild-plugin-typecheck": {
       "esbuild": "$esbuild"
     }
