--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "setup": "npm ci && hmpps-npm-script-run-allowlist"
   },
   "engines": {
-    "node": "^22",
+    "node": "^24",
     "npm": "^11"
   },
   "jest": {
@@ -78,7 +78,7 @@
     "@ministryofjustice/frontend": "^5.1.5",
     "@ministryofjustice/hmpps-audit-client": "^1.1.1",
     "@ministryofjustice/hmpps-connect-dps-components": "^2.2.0",
-    "@ministryofjustice/hmpps-monitoring": "^0.0.1",
+    "@ministryofjustice/hmpps-monitoring": "^1.0.0",
     "@types/qs": "^6.14.0",
     "accessible-autocomplete": "^3.0.1",
     "agentkeepalive": "^4.6.0",
@@ -109,7 +109,7 @@
     "@jgoz/esbuild-plugin-typecheck": "^4.0.3",
     "@ministryofjustice/eslint-config-hmpps": "^1.0.2",
     "@ministryofjustice/hmpps-npm-script-allowlist": "0.0.3",
-    "@tsconfig/node22": "^22.0.2",
+    "@tsconfig/node24": "24.0.3",
     "@types/bunyan": "^1.8.11",
     "@types/bunyan-format": "^0.2.9",
     "@types/compression": "^1.8.1",
@@ -118,7 +118,7 @@
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^22.17.2",
+    "@types/node": "24.10.4",
     "@types/nunjucks": "^3.2.6",
     "@types/passport": "^1.0.17",
     "@types/passport-oauth2": "^1.8.0",
