--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@ministryofjustice/frontend": "^5.1.5",
     "@ministryofjustice/hmpps-audit-client": "^1.1.1",
     "@ministryofjustice/hmpps-connect-dps-components": "^2.2.0",
+    "@ministryofjustice/hmpps-connect-dps-shared-items": "3.2.1",
     "@ministryofjustice/hmpps-monitoring": "^1.0.0",
     "@types/qs": "^6.14.0",
     "accessible-autocomplete": "^3.0.1",
