update health e2e test

--- a/feature.env
+++ b/feature.env
@@ -14,6 +14,5 @@ AUDIT_ENABLED=false
 MANAGING_PRISONER_APPS_API_URL=http://localhost:9091/managingPrisonerApps
 PRISON_API_URL=http://localhost:9091/prison
 PERSONAL_RELATIONSHIPS_API_URL=http://localhost:9091/personalRelationships
-
-OS_PLACES_API_URL=https://api.os.uk/search/places/v1
-OS_PLACES_API_KEY=Kk3tsS7vujVSiBBLP6UbnqmNLOfPXp1Y
+OS_PLACES_API_URL=http://localhost:9091/osPlaces
+OS_PLACES_API_KEY=test-key
