--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -18,6 +18,7 @@ generic-service:
     MANAGING_PRISONER_APPS_API_URL: 'https://managing-prisoner-apps-api-dev.hmpps.service.justice.gov.uk'
     PRISON_API_URL: 'https://prison-api-dev.prison.service.justice.gov.uk'
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api-dev.hmpps.service.justice.gov.uk'
+    OS_PLACES_API_URL: 'https://api.os.uk/search/places/v1'
     ENVIRONMENT_NAME: DEV
     AUDIT_ENABLED: 'true'
     GA4_SITE_ID: 'G-HE5P4PEE48'
