--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -16,6 +16,7 @@ generic-service:
     MANAGING_PRISONER_APPS_API_URL: 'https://managing-prisoner-apps-api.hmpps.service.justice.gov.uk'
     PRISON_API_URL: 'https://prison-api.prison.service.justice.gov.uk'
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api.hmpps.service.justice.gov.uk'
+    OS_PLACES_API_URL: 'https://api.os.uk/search/places/v1'
     ENVIRONMENT_NAME: PRODUCTION
     AUDIT_ENABLED: 'true'
     GA4_SITE_ID: 'G-92H885MST9'
