--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -17,6 +17,7 @@ generic-service:
     PRISON_API_URL: 'https://prison-api.prison.service.justice.gov.uk'
     PERSONAL_RELATIONSHIPS_API_URL: 'https://personal-relationships-api.hmpps.service.justice.gov.uk'
     OS_PLACES_API_URL: 'https://api.os.uk/search/places/v1'
+    LOG_METHOD_PAGE_ENABLED: 'false'
     ENVIRONMENT_NAME: PRODUCTION
     AUDIT_ENABLED: 'true'
     GA4_SITE_ID: 'G-92H885MST9'
