--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "compression": "^1.8.1",
     "connect-flash": "^0.1.1",
     "connect-redis": "^8.1.0",
+    "cropperjs": "2.1.0",
     "csrf-sync": "^4.2.1",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
@@ -99,6 +100,7 @@
     "http-errors": "^2.0.0",
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.13",
+    "multer": "2.0.2",
     "nocache": "^4.0.0",
     "nunjucks": "^3.2.4",
     "passport": "^0.7.0",
@@ -119,6 +121,7 @@
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "2.0.0",
     "@types/node": "24.10.4",
     "@types/nunjucks": "^3.2.6",
     "@types/passport": "^1.0.17",
